{
    "name": "PlayerController",
    "maps": [
        {
            "name": "PlayerMap",
            "id": "3aecc059-f3ef-4a1a-8b11-6c39e8d3c415",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "a747bbb9-3fac-45fd-94c1-7e6f066d444e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "92e2a67d-c97f-4f1a-9179-2256bb0500f1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "f39e8dd3-a96a-4208-bc2b-bef92a8dc053",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ViewX",
                    "type": "Value",
                    "id": "bdf6876c-fd17-417a-98aa-082513c8c4d3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ViewY",
                    "type": "Value",
                    "id": "a5f64410-e12f-482e-b57a-bbd3bb810331",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ViewXPos",
                    "type": "Value",
                    "id": "3242ccf7-1167-471b-b7a4-88c26f25387b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ViewYPos",
                    "type": "Value",
                    "id": "5addf5ca-431e-4679-b3c6-78325a11c8c7",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "e1a3acec-ed2e-4c19-8a82-361b3616730d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "86571e6d-bed6-4c2e-84dd-438e5ca174c5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "789e10a7-ec72-479e-a757-b65d21a023e4",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c4b4e7fb-136d-4047-9d6c-eb1390f982b5",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dea3a6e6-b366-40fb-bf2b-ef52bd927767",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "356468ad-e123-47fa-9eee-c170d0ff03c5",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eae4b79e-7006-4c4f-a507-1e4b15bfdd33",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3248acb-7e18-41bc-8edd-705b364b3cf9",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f86656d9-88fd-4514-a09c-0a8501c478c7",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1ceb5a33-4de5-41e4-96ae-0b6eaed94ac3",
                    "path": "<Mouse>/position/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewXPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90489c7b-55ff-4177-8a91-923241013f8c",
                    "path": "<Mouse>/position/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ViewYPos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}